[package]
name = "uv-remapper"
version = "0.1.0"
authors = ["kb10uy <kb10uy@kb10uy.org>"]
edition = "2018"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]

[dependencies.rlua]
version = "0.17"

[dependencies.image]
version = "0.23"

[dependencies.ultraviolet]
version = "0.4"

[dependencies.log]
version = "0.4"

[dependencies.pretty_env_logger]
version = "0.4"

[dependencies.clap]
git = "https://github.com/clap-rs/clap/"

[dependencies.colored]
version = "1.9"
